--- a/Report/Report.Rmd
+++ b/Report/Report.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Does race and politics have an impact on police violence in the United States ?"
-author: "Jérémy Olivier and Chloé Mousse"
+author: "Jérémy Olivier and Chloé Mousset"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
   html_document:
